amend package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This module houses the smart contracts for the Decentralised ERC-20 Exchange on OrbitDB project. The smart contracts will first include the creation of two tokens for a trading demonstration on the exchange. They will also connect the order book and the front end, i.e. when a user makes a transaction on the exchange website, the relevant functions in the smart contracts will be called to update the relevant users' balances etc. in the order book.",
   "main": "truffle-config.js",
   "directories": {
+    "ganache": "ganache-cli -p 7545",
     "test": "truffle test",
     "coverage": "./node_modules/.bin/solidity-coverage"
   },
