--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,6 @@ install:
   - npm install -g ganache-cli
   - npm install
 script:
+  - npm ganache
   - npm test
-before_script:
-  - testrpc > /dev/null &
-  - sleep 5
-after_script:
   - npm run coverage && cat coverage/lcov.info | coveralls
