amend script again

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ install:
   - npm install -g ganache-cli
   - npm install
 script:
-  - ganache-cli -p 7545
+  - ganache-cli -p 7545 > /dev/null &
+  - sleep 5
+  - truffle migrate
   - truffle test
   - npm run coverage && cat coverage/lcov.info | coveralls
