add coveralls to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
   - '11'
 install:
   - npm install -g truffle
+  - npm install -g coveralls
   - npm install -g ganache-cli
   - npm install
 script:
