--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "truffle test"
+    "coverage": "/Users/apple/desktop/Node/node_modules/.bin/solidity-coverage"
   },
   "repository": {
     "type": "git",
