--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "truffle test"
+    "test": "truffle test",
     "coverage": "Users/apple/desktop/Node/node_modules/.bin/solidity-coverage"
   },
   "repository": {
